mise à jour code bawé

--- a/index.html
+++ b/index.html
@@ -319,11 +319,12 @@
                                 <p><i class="fas fa-home me-2"></i><strong>Adresse:</strong><br>
                                 Quartier Bawé, Parakou, Bénin</p>
                                 <p><i class="fas fa-phone me-2"></i><strong>Téléphone:</strong><br>
-                                +229 96 00 00 00</p>
+                                +229 01 61 75 86 08 / +229 01 55 01 54 41</p>
                                 <p><i class="fas fa-envelope me-2"></i><strong>Email:</strong><br>
                                 babioaboudou93@gmail.com</p>
                                 <p><i class="fab fa-whatsapp me-2"></i><strong>WhatsApp:</strong><br>
-                                <a href="https://wa.me/22996000000" class="text-success" target="_blank">Nous contacter</a></p>
+                                <a href="https://wa.me/22955015441?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
+" class="text-success" target="_blank">Nous contacter</a></p>
                             </div>
                         </div>
                     </div>
