--- a/index.html
+++ b/index.html
@@ -281,6 +281,27 @@
                         <img src="attached_assets/picture12_1753646596086.jpg" class="img-fluid rounded shadow-sm" alt="Salon" data-bs-toggle="modal" data-bs-target="#galleryModal" onclick="showImage(this.src)">
                     </div>
                 </div>
+              
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="gallery-item">
+                        <img src="attached_assets/picture20.jpg" class="img-fluid rounded shadow-sm" alt="Salon" data-bs-toggle="modal" data-bs-target="#galleryModal" onclick="showImage(this.src)">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="gallery-item">
+                        <img src="attached_assets/picture22.jpg" class="img-fluid rounded shadow-sm" alt="Salon" data-bs-toggle="modal" data-bs-target="#galleryModal" onclick="showImage(this.src)">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="gallery-item">
+                        <img src="attached_assets/picture23.jpg" class="img-fluid rounded shadow-sm" alt="Salon" data-bs-toggle="modal" data-bs-target="#galleryModal" onclick="showImage(this.src)">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="gallery-item">
+                        <img src="attached_assets/picture28.jpg" class="img-fluid rounded shadow-sm" alt="Salon" data-bs-toggle="modal" data-bs-target="#galleryModal" onclick="showImage(this.src)">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
