code source BAWE

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
-                <a href="https://wa.me/22955015441?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
+                <a href="https://wa.me/22944815885?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
 " class="btn btn-success" target="_blank">
                     <i class="fab fa-whatsapp me-2"></i>Réserver
                 </a>
@@ -58,7 +58,7 @@
                             Confort, modernité et tranquillité vous attendent.
                         </p>
                         <a href="#chambres" class="btn btn-primary btn-lg me-3">Découvrir nos chambres</a>
-                        <a href="https://wa.me/22955015441?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
+                        <a href="https://wa.me/22944815885?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
 " class="btn btn-success btn-lg" target="_blank">
                             <i class="fab fa-whatsapp me-2"></i>Réserver maintenant
                         </a>
@@ -81,7 +81,7 @@
                 <!-- Chambre Standard -->
                 <div class="col-lg-4 col-md-6">
                     <div class="card h-100 shadow-sm">
-                        <img src="attached_assets/picture14_1753646596045.jpg" class="card-img-top" alt="Chambre Standard">
+                        <img src="attached_assets/picture7_1753646596164.jpg" class="card-img-top" alt="Chambre Standard">
                         <div class="card-body">
                             <h5 class="card-title">Chambre Standard</h5>
                             <p class="card-text">Chambre confortable avec tous les équipements essentiels.</p>
@@ -96,7 +96,7 @@
                             </ul>
                         </div>
                         <div class="card-footer">
-                            <a href="https://wa.me/22955015441?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
+                            <a href="https://wa.me/22944815885?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations%20sur%20la%20chambre%20Standard
 " class="btn btn-primary w-100" target="_blank">Réserver</a>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             </ul>
                         </div>
                         <div class="card-footer">
-                            <a href="https://wa.me/22955015441?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
+                            <a href="https://wa.me/22944815885?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations%20sur%20la%20chambre%20Supérieure
 " class="btn btn-primary w-100" target="_blank">Réserver</a>
                         </div>
                     </div>
@@ -152,8 +152,7 @@
                             </ul>
                         </div>
                         <div class="card-footer">
-                            <a href="https://wa.me/22955015441?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
-" class="btn btn-warning w-100" target="_blank">Réserver</a>
+                            <a href="https://wa.me/22944815885?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations%20sur%20la%20suite%20Deluxe" class="btn btn-warning w-100" target="_blank">Réserver</a>
                         </div>
                     </div>
                 </div>
@@ -284,7 +283,7 @@
               
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="gallery-item">
-                        <img src="attached_assets/picture20.jpg" class="img-fluid rounded shadow-sm" alt="Salon" data-bs-toggle="modal" data-bs-target="#galleryModal" onclick="showImage(this.src)">
+                        <img src="attached_assets/picture15.jpg" class="img-fluid rounded shadow-sm" alt="Salon" data-bs-toggle="modal" data-bs-target="#galleryModal" onclick="showImage(this.src)">
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
@@ -340,7 +339,7 @@
                                 <p><i class="fas fa-envelope me-2"></i><strong>Email:</strong><br>
                                 babioaboudou93@gmail.com</p>
                                 <p><i class="fab fa-whatsapp me-2"></i><strong>WhatsApp:</strong><br>
-                                <a href="https://wa.me/22955015441?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
+                                <a href="https://wa.me/22944815885?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
 " class="text-success" target="_blank">Nous contacter</a></p>
                             </div>
                         </div>
@@ -386,7 +385,7 @@
                 </div>
                 <div class="col-lg-6 text-lg-end">
                     <div class="social-links mb-3">
-                        <a href="https://wa.me/22955015441?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
+                        <a href="https://wa.me/22944815885?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
 " class="text-white me-3" target="_blank">
                             <i class="fab fa-whatsapp fa-2x"></i>
                         </a>
