code source BAWE

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                 babioaboudou93@gmail.com</p>
                                 <p><i class="fab fa-whatsapp me-2"></i><strong>WhatsApp:</strong><br>
                                 <a href="https://wa.me/22944815885?text=Bonjour%2C%20je%20souhaite%20avoir%20plus%20d'informations
-" class="text-success" target="_blank">Nous contacter</a></p>
+" class="text-success" target="_blank" style="color: antiquewhite;">Nous contacter</a></p>
                             </div>
                         </div>
                     </div>
@@ -401,7 +401,7 @@
             <hr>
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">&copy; 2024 Résidence Bawé. Tous droits réservés. | Créé par <strong>Babio Aboudou Moumine</strong></p>
+                    <p class="mb-0">&copy; 2025 Résidence Bawé. Tous droits réservés. | Créé par <strong>Babio Aboudou Moumine</strong></p>
                 </div>
             </div>
         </div>
